# codex

./: .cargo-publish-ignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE_IMPROVEMENTS.md  BACKLOG.md  CDEX-001-story.md  CDEX-001_LEARNINGS.md  CLAUDE.local.md  CLAUDE.md  CODEX-014_ACHIEVEMENTS.md  COGNITIVE_MEMORY_IMPLEMENTATION.md  Cargo.toml  FINAL_VALIDATION_REPORT.md  HOW_IT_WORKS.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS.md  LICENSE  MCP_INSTALLATION_COMPLETE.md  MCP_SETUP.md  OHAT_CLOUDFORMATION_SUMMARY.md  PRIORITY_MATRIX.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  REFACTORING_ROADMAP.md  SETUP.md  STORIES.md  TEMPORAL_SEARCH_FIX_VERIFICATION.md  add_test_memories.sh  add_test_memories_proper.sh  apply_migration.sh  apply_migration_ubuntu.sh  arch_violations.md  codex-memory.dxt  conversation_harvest_request.md  critical_learnings_codex_dreams_2025_08_25.md  debug_connection.sh  debug_triggers.rs  docker-compose.yml  issues.md  (+21 more)
.claude/: settings.local.json
.claude/agents/: memory-curator.md
.github/workflows/: release-extension.yml
.sqlx/: query-168f4f2bbf8cce360776d8c156f204e51b56091b0f37e6eb87452d124de8b8e1.json  query-416fe447502e6abc4614095426742a8859aea177cf8136fe3d241eb0645ee3b7.json  query-481ab60e230afbc68355743a0c6f32cbacae75e62995950b424e7d62fdf2d1e8.json  query-d2f22308a900008c20d24279ff2fa82004f31fd32207e3b4d01a033aba11b374.json  query-f55a75860677bf97e4aa98cd512600711ea5be5c39f03d7e63c9829198267a05.json  query-fdbe831be4980792f13cb9d5e12e907e0d1d84d1733219cd966830017d5cce7c.json
benchmarks/: combined_score_performance.sql
config/: pgbouncer.ini  postgresql.conf  userlist.txt
docs/: CHANGELOG.md  api_reference.md  architecture.md  claude_developer_guide.md  connection_pool_optimization_analysis.md  database_performance_tuning.md  developer_onboarding_guide.md  error_reference.md  faq.md  knowledge_base.md  mathematical_formulas.md  mcp_authentication.md  operations_runbook.md  performance_indexes_migration_runbook.md  performance_tuning_guide.md  security_migration_runbook.md  sla.md  support_procedures.md  troubleshooting_guide.md  unsafe_code_audit.md
docs/adr/: 001-memory-tier-architecture.md  002-mcp-protocol-adoption.md  003-postgresql-vector-extensions.md  004-rust-async-architecture.md  005-security-authentication-model.md  README.md
docs/database/: insights-schema.md
embedding-pipeline/: Cargo.toml
embedding-pipeline/src/: cache.rs  claude.rs  cost_tracker.rs  gpu.rs  lib.rs  local.rs  metrics.rs  pipeline.rs  router.rs
embedding-pipeline/tests/: integration_test.rs  unit_tests.rs
examples/: automated_insights.sh  math_engine_benchmark.rs  story9_enhanced_retrieval_demo.rs  test_codex_dreams.rs  test_insight_generation.rs  test_insights_simple.rs  test_ollama_health.rs
extension/: EXTENSION_RELEASE_NOTES.md  README.md  build-extension.sh  codex-memory  codex-memory.js  manifest.json  ollama_integration_debug_session.dxt  run-codex-memory.sh  run-codex.sh  test-manifest.json  test.dxt  test.js
mcp-server/: Cargo.toml
mcp-server/src/: circuit_breaker.rs  handlers.rs  retry.rs  server.rs
memory-core/: Cargo.toml
memory-core/src/: connection.rs  error.rs  lib.rs  models.rs  repository.rs
memory-migration/: Cargo.toml
memory-migration/src/: lib.rs  migration_engine.rs
migration/: Cargo.toml  architecture_alignment_migration.sql  fix_test_database.sql
migration/migrations/: 001_initial_schema.sql  001_initial_schema_rollback.sql  002_consolidation_schema.sql  002_consolidation_schema_rollback.sql  003_knowledge_graph_schema.sql  004_semantic_deduplication_schema.sql  004_semantic_deduplication_schema_rollback.sql  005_performance_dashboard_schema.sql  005_performance_dashboard_schema_rollback.sql  006_frozen_tier_support.sql  006_frozen_tier_support_rollback.sql  007_combined_score_generated.sql  007_combined_score_generated_rollback.sql  008_missing_tables_schema.sql  008_missing_tables_schema_rollback.sql  009_security_hardening.sql  009_security_hardening_rollback.sql  010_performance_optimization_indexes.sql  010_performance_optimization_indexes_rollback.sql  011_critical_missing_indexes.sql  011_critical_missing_indexes_rollback.sql  012_testing_effect_columns.sql  013_fix_column_types.sql  014_codex_dreams_insights_schema.sql  014_codex_dreams_insights_schema_rollback.sql
migration/src/: lib.rs
scripts/: cleanup_bad_memories.sql  fix_memory_tiers.sql  fix_memory_tiers_final.sql  fix_memory_tiers_v2.sql  init-primary.sql  load_test_vector_ops.rs  performance-regression-test.sh  run-e2e-tests.sh  setup.sh  setup_high004_optimization.sh  test_db_connection.sh  verify_hnsw_optimization.sh  verify_hnsw_optimization.sql
src/: config.rs  database_setup.rs  embedding.rs  lib.rs  main.rs  manager.rs  setup.rs
static/: app.js  index.html  styles.css
tests/: advanced_concurrency_testing.rs  background_reflection_integration_tests.rs  basic_functionality_test.rs  batch_consolidation_performance_test.rs  chaos_engineering.rs  claude_integration_test.rs  comprehensive_test_runner.rs  connection_pool_load_test.rs  database_connectivity_test.rs  debug_pattern.rs  e2e_basic_crud.rs  e2e_codex_dreams_full.rs  e2e_codex_dreams_migrations.rs  e2e_complete_workflows.rs  e2e_mcp_insights_commands.rs  e2e_mcp_integration.rs  e2e_mcp_integration.rs.disabled  e2e_memory_operations.rs  e2e_memory_operations.rs.disabled  e2e_ollama_integration.rs  e2e_performance_load.rs  e2e_scheduler_performance.rs  e2e_search_memory_regression.rs  e2e_security_simple.rs  e2e_simplified.rs  error_handling_tests.rs  insights_pipeline_test.rs  integration_database_operations.rs  integration_external_services.rs  integration_mcp_auth_rate_limiting.rs  integration_mcp_consolidated.rs  integration_mcp_insights.rs  integration_mcp_simple.rs  integration_test.rs  mathematical_formula_validation.rs  n_plus_1_performance_test.rs  performance_indexes_test.rs  performance_tests.rs  performance_tests.rs.disabled  property_based_testing.rs  (+25 more)
working-memory/: Cargo.toml
working-memory/src/: buffer.rs  embedder.rs  ffi.rs  lib.rs  storage.rs
(+103 files in other folders)
