[package]
name = "codex-memory"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "embedding-pipeline", "mcp-server", "memory-core", "migration", "working-memory"]

[dependencies]
memory-core = { path = "./memory-core" }
migration = { path = "./migration" }
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
config = "0.14"
dotenv = "0.15"
prometheus = { version = "0.13", features = ["process"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

[dev-dependencies]
proptest = "1.6"
criterion = "0.5"
tempfile = "3.14"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }

