[package]
name = "codex-memory"
version = "0.1.42"
edition = "2021"
authors = ["Ladvien <your-email@example.com>"]
description = "An advanced hierarchical memory system for AI agents with MCP integration"
repository = "https://github.com/Ladvien/codex"
license = "GPL-3.0"
keywords = ["memory", "ai", "mcp", "agent", "embedding"]
categories = ["database", "command-line-utilities", "web-programming"]
readme = "README.md"
homepage = "https://github.com/Ladvien/codex"
exclude = ["extension/", "tests/", "*.dxt", "HOW_IT_WORKS.md", ".env", "*.log", "target/", "src/bin/web-ui.rs"]

# [workspace]
# members = [".", "migration"]

[dependencies]
# Core runtime
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
# migration = { version = "0.1.0", path = "./migration", optional = true }

# Data types
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server and MCP
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "auth", "limit", "validate-request", "fs"] }

# Security dependencies
rustls = "0.23"
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
jsonwebtoken = "9.3"
argon2 = "0.5"
governor = "0.6"
nonzero_ext = "0.3"
headers = "0.4"

# Input validation and sanitization
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"

# Audit logging - using tracing for structured logging
log = "0.4"

# Configuration
config = "0.14"
dotenv = "0.15"
toml = "0.8"

# CLI support
clap = { version = "4.4", features = ["derive", "env"] }

# URL parsing for database setup
url = "2.5"

# Database connectivity (additional to sqlx)
tokio-postgres = "0.7"

# Simple embedding service
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }

# Hashing for content deduplication
sha2 = "0.10"
hex = "0.4"

# Random numbers for jitter
rand = "0.8"

# Base64 encoding for cursors
base64 = "0.22"

# Compression for frozen tier
zstd = "0.13"

# MCP server
jsonrpc-core = "18.0"
jsonrpc-tcp-server = "18.0"
async-trait = "0.1"

# Basic metrics (simplified)
prometheus = { version = "0.14", features = ["process"] }

# Performance testing
sysinfo = "0.30"
md5 = "0.8.0"

# Additional dependencies for backup system (sha2 and rand already included)

# Manager dependencies
dirs = "5.0"
futures = "0.3"

# [features]
# default = ["migration-support"]
# migration-support = ["migration"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
# Testing dependencies
testcontainers = "0.15"
tokio-test = "0.4"
tempfile = "3.14"
tracing-test = "0.2"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"
proptest = "1.4"
approx = "0.5"
