[package]
name = "embedding-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting and caching
governor = "0.7"
nonzero_ext = "0.3"
moka = { version = "0.12", features = ["future"] }
ttl_cache = "0.5"

# Simplified - ONNX support commented out for now
# ort = { version = "2.0", features = ["cuda", "tensorrt"] }
ndarray = "0.16"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Circuit breaker and retry
backoff = "0.4"
arc-swap = "1.7"
parking_lot = "0.12"
dashmap = "6.1"

[features]
default = []

[dev-dependencies]
mockito = "1.6"
tokio-test = "0.4"
wiremock = "0.6"
