[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-tcp-server = "18.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tower = "0.5"
tower-service = "0.3"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
