[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
