[package]
name = "working-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8"
crossbeam-queue = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
memmap2 = "0.9"
lru = "0.12"
arc-swap = "1.7"
bytes = "1.9"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
tempfile = "3.14"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
